flowc/tests/fixtures/check_e149_operator_type.expected.err
tests/fixtures/check_e149_operator_type.flow:2:5: error[E149]: operator '%' requires int operands, got float and float
