flowc/tests/fixtures/check_e149_operator_type.flow
flow remainder(a: float, b: float) -> float {
  a % b
}
